# eScience-Tools-in-Climate-Science

./: .gitignore  Licence.md  README.md  modis_nd_bias.ipynb  modis_nd_bias.py
Final-Report-escience2020-group8-Presvelou/: escience2020-group8-Presvelou.ipynb
project-01-modis-nd-bias/: README.md  pyproject.toml
project-01-modis-nd-bias/examples/: run_bias_example.py
project-01-modis-nd-bias/notebooks/: escience2020-group8-Presvelou.ipynb
project-01-modis-nd-bias/src/modis_nd_bias/: __init__.py  cli.py  core.py  plot.py
project-01-modis-nd-bias/src/modis_nd_bias.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
project-01-modis-nd-bias/tests/: test_core.py
